--- a/src/data_engineer/사용법.md
+++ b/src/data_engineer/사용법.md
@@ -19,11 +19,12 @@ Faster_RCNN_dataloader.py 함수 목록:
 예제 코드:
 """
 import os
-
 from Faster_RCNN_dataset import FasterRCNNDataset
 from Faster_RCNN_dataset import TestDataset
-
 import Faster_RCNN_dataloader
+from sklearn.model_selection import train_test_split
+import glob
+from make_classID_txt import make_classIDtxt
 
 master_dir = r"ai-07-object-detection\sprint_ai_project1_data"              #   <-- 마스터 경로 입력
 test_dir = r"ai-07-object-detection\sprint_ai_project1_data\test_images"    #   <-- 테스트 이미지 경로 입력
@@ -32,10 +33,24 @@ anntation_dir = os.path.join(master_dir, r"train_annotations")              #   
 image_dir = os.path.join(master_dir, r"train_images")                       #   <-- 마스터 경로 아래 이미지 폴더 이름
 
 
-fast_dataset = FasterRCNNDataset(image_dir, anntation_dir)                  #   <-- train 데이터 class 객체 생성
+cat_path, _ = make_classIDtxt(anntation_dir)
+
+fast_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path)                  #   <-- train 데이터 class 객체 생성
 test_dataset = TestDataset(test_dir)                                        #   <-- test 데이터 class 객체 생성
 
 full_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(fast_dataset,4)   #   <-- 데이터 로더 생성
+
+
+img_path_list = glob.glob(os.path.join(image_dir, "**"), recursive=True)    #   split 모드 <-- 이미지 경로 리스트를 받아 dataset 생성
+train_imgs_path, val_imgs_path = train_test_split(img_path_list, test_size=0.2, random_state=42, shuffle=True)
+
+train_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path, img_path_list_mode=True, img_path_list=train_imgs_path)   #   img_path_list_mode == 이미지 경로 리스트 형태로 받음
+valid_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path, img_path_list_mode=True, img_path_list=val_imgs_path)
+
+print(len(train_dataset), len(valid_dataset))
+
+train_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(train_dataset,4)
+valid_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(valid_dataset,4)
 """
 
 
