ClassID.txt를 불러오는 방식으로 수정

--- a/src/data_engineer/사용법.md
+++ b/src/data_engineer/사용법.md
@@ -3,6 +3,7 @@
 필요 파일:
 Faster_RCNN_dataset.py
 Faster_RCNN_dataloader.py
+make_classID_txt.py
 
 
 Faster_RCNN_dataset.py 클래스 목록:
@@ -25,6 +26,8 @@ import Faster_RCNN_dataloader
 from sklearn.model_selection import train_test_split
 import glob
 from make_classID_txt import make_classIDtxt
+from class_mapping import read_classID
+
 
 master_dir = r"ai-07-object-detection\sprint_ai_project1_data"              #   <-- 마스터 경로 입력
 test_dir = r"ai-07-object-detection\sprint_ai_project1_data\test_images"    #   <-- 테스트 이미지 경로 입력
@@ -32,10 +35,9 @@ test_dir = r"ai-07-object-detection\sprint_ai_project1_data\test_images"    #   
 anntation_dir = os.path.join(master_dir, r"train_annotations")              #   <-- 마스터 경로 아래 json 폴더 이름
 image_dir = os.path.join(master_dir, r"train_images")                       #   <-- 마스터 경로 아래 이미지 폴더 이름
 
+class_dict = read_classID(anntation_dir)        #       <-- annotation_dir의 ClassID.txt 파일
 
-cat_path, _ = make_classIDtxt(anntation_dir)
-
-fast_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path)                  #   <-- train 데이터 class 객체 생성
+fast_dataset = FasterRCNNDataset(image_dir, anntation_dir, class_dict)                  #   <-- train 데이터 class 객체 생성
 test_dataset = TestDataset(test_dir)                                        #   <-- test 데이터 class 객체 생성
 
 full_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(fast_dataset,4)   #   <-- 데이터 로더 생성
@@ -44,8 +46,8 @@ full_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(fast_datas
 img_path_list = glob.glob(os.path.join(image_dir, "**"), recursive=True)    #   split 모드 <-- 이미지 경로 리스트를 받아 dataset 생성
 train_imgs_path, val_imgs_path = train_test_split(img_path_list, test_size=0.2, random_state=42, shuffle=True)
 
-train_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path, img_path_list_mode=True, img_path_list=train_imgs_path)   #   img_path_list_mode == 이미지 경로 리스트 형태로 받음
-valid_dataset = FasterRCNNDataset(image_dir, anntation_dir, cat_path, img_path_list_mode=True, img_path_list=val_imgs_path)
+train_dataset = FasterRCNNDataset(image_dir, anntation_dir, class_dict, img_path_list_mode=True, img_path_list=train_imgs_path)   #   img_path_list_mode == 이미지 경로 리스트 형태로 받음
+valid_dataset = FasterRCNNDataset(image_dir, anntation_dir, class_dict, img_path_list_mode=True, img_path_list=val_imgs_path)
 
 print(len(train_dataset), len(valid_dataset))
 
