feat, docs: transform_module.py 추가, 사용법.md transform 예제 추가

--- a/src/data_engineer/사용법.md
+++ b/src/data_engineer/사용법.md
@@ -27,6 +27,10 @@ from sklearn.model_selection import train_test_split
 import glob
 from make_classID_txt import make_classIDtxt
 from class_mapping import read_classID
+from transform_module import train_transforms
+from transform_module import test_transforms
+#from transform_module import no_Resize_train_transforms                # 원본 사이즈가 필요할 시 적용할 transform
+#from transform_module import no_Resize_test_transforms
 
 
 master_dir = r"ai-07-object-detection\sprint_ai_project1_data"              #   <-- 마스터 경로 입력
@@ -53,6 +57,15 @@ print(len(train_dataset), len(valid_dataset))
 
 train_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(train_dataset,4)
 valid_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(valid_dataset,4)
+
+
+tr_train_dataset = FasterRCNNDataset(image_dir, anntation_dir, class_dict, transforms=train_transforms, img_path_list_mode=True, img_path_list=train_imgs_path)   #      transform 적용 dataset 만들기
+tr_valid_dataset = FasterRCNNDataset(image_dir, anntation_dir, class_dict, transforms=test_transforms, img_path_list_mode=True, img_path_list=val_imgs_path)     #      transform 적용 test dataset 만들기
+
+print(len(train_dataset), len(valid_dataset))
+
+train_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(tr_train_dataset,4)
+valid_dataloader = Faster_RCNN_dataloader.full_train_build_dataloaders(tr_valid_dataset,4)
 """
 
 
