feat, fix: 데이터 실험 코드 작성, test dataset load 오류 수정

--- a/src/data_engineer/사용법.md
+++ b/src/data_engineer/사용법.md
@@ -103,17 +103,21 @@ split_yolo_dataset(image_dir, anntation_dir, output_dir, val_ratio=0.2, seed=42,
 from make_YOLO_annotation import make_YOLO_annotation
 from yolo_data_split import split_yolo_dataset
 from class_mapping import read_classID
+from yolo_get_file_name_list import get_file_name_YOLO
+from torchvision.transforms import v2
+from yolo_img_converter import apply_v2_compose_and_save
 
 import os
 
-master_dir = r"ai-07-object-detection\sprint_ai_project1_data"     #   <-- 마스터 경로 입력
+master_dir = r"C:\Users\User1\Downloads\ai-07-object-detection\sprint_ai_project1_data"     #   <-- 마스터 경로 입력
 
-anntation_dir = os.path.join(master_dir, r"train_annotations")                              #   <-- 마스터 경로 아래 json 폴더 이름                              
+anntation_dir = os.path.join(master_dir, r"train_annotations")                              #   <-- 마스터 경로 아래 json 폴더 이름
 image_dir = os.path.join(master_dir, r"train_images")                                       #   <-- 마스터 경로 아래 이미지 폴더 이름
 
 class_dict = read_classID(anntation_dir)                                                    #       <-- annotation_dir의 ClassID.txt 파일
 
-
+a_list = None
+a_list = get_file_name_YOLO(anntation_dir,image_dir)                                        #   <-- a_list(valid 데이터 이름 리스트를 가져옴)
 
 transforms = v2.Compose([            # 이미지 변환에 사용할 v2.Copmpose --> bbox에 영향을 받지 않는 변환만 가능합니다. (padding, rotation, resize 등 안됨)
     v2.RandomAdjustSharpness(sharpness_factor=50.0, p=1.0),
@@ -129,6 +133,7 @@ split_yolo_dataset(
         image_dir=image_dir,                    #   <-- 원본 이미지 폴더
         anntation_dir=yolo_annotation_dir,      #   <-- 원본 annotation(txt) 폴더
         output_dir=master_dir,                  #   <-- 결과 저장 폴더
-        val_ratio=0.2                           #   <-- train 80% valid 20%
+        val_ratio=0.2,                           #   <-- train 80% valid 20%
+        file_name_list=a_list                   #   <-- Valid 파일 이름 리스트
 )
 """
