--- a/src/data_engineer/데이터 실험.md
+++ b/src/data_engineer/데이터 실험.md
@@ -137,6 +137,8 @@ test_dataloader = Faster_RCNN_dataloader.test_build_dataloaders(test_dataset,4)
 
 3. 원본 + 증강 데이터 학습 모델 mAP 점수
 
+4. 원본 + 증강 데이터 학습 모델 mAP 점수
+
 
 
 
@@ -612,4 +614,53 @@ data_maker(image_dir,anntation_dir,img_train_dir, label_train_dir,transforms, fi
 data_maker(image_dir,anntation_dir,img_train_dir, label_train_dir,transforms, file_list3, 3)
 data_maker(image_dir,anntation_dir,img_train_dir, label_train_dir,transforms, file_list4, 2)
 data_maker(image_dir,anntation_dir,img_train_dir, label_train_dir,transforms, file_list5, 1)
+"""
+
+
+##### YOLO 4번 데이터 생성 예제 코드
+"""
+from make_YOLO_annotation import make_YOLO_annotation
+from yolo_data_split import split_yolo_dataset
+from class_mapping import read_classID
+from yolo_get_file_name_list import get_file_name_YOLO
+from YOLO_data_maker2 import data_maker2
+import os
+
+master_dir = r"C:\Users\User1\Downloads\ai-07-object-detection\sprint_ai_project1_data"     #   <-- 마스터 경로 입력
+
+anntation_dir = os.path.join(master_dir, r"train_annotations")                              #   <-- 마스터 경로 아래 json 폴더 이름
+image_dir = os.path.join(master_dir, r"train_images")                                       #   <-- 마스터 경로 아래 이미지 폴더 이름
+
+class_dict = read_classID(anntation_dir)                                                    #       <-- annotation_dir의 ClassID.txt 파일
+
+a_list = None
+a_list = get_file_name_YOLO(anntation_dir,image_dir, -8)                                        #   <-- a_list(valid 데이터 이름 리스트를 가져옴)
+
+
+yolo_annotation_dir = make_YOLO_annotation(image_dir, anntation_dir, class_dict, "YOLO_annotation_file")    #   <-- yolo annotation 파일 생성. 생성된 폴더 경로를 반환 (anntation_dir 아래 YOLO_annotation_file 이름으로 파일이 생성됩니다.)
+
+split_yolo_dataset(
+        image_dir=image_dir,                    #   <-- 원본 이미지 폴더
+        anntation_dir=yolo_annotation_dir,      #   <-- 원본 annotation(txt) 폴더
+        output_dir=master_dir,                  #   <-- 결과 저장 폴더
+        val_ratio=0.2,                           #   <-- train 80% valid 20%
+        file_name_list=a_list                   #   <-- Valid 파일 이름 리스트
+)
+
+img_dir = os.path.join(master_dir, r"images", r"train")    #   <-- split된 image\train 폴더
+txt_dir = os.path.join(master_dir, r"labels", r"train")    #   <-- split된 labels\train 폴더
+
+class_list1 = [29451, 33009, 21771, 27926, 24850, 16551, 33208, 3743, 13395, 12081, 19552, 22362, 34597, 31885, 27777, 12247, 27993]         #--> 전체 클래스 수: 3
+class_list2 = [19607, 29345, 12778, 2543, 19861, 3544, 4543, 25438]    #--> 전체 클래스 수: 6
+class_list3 = [16688]                                           #--> 전체 클래스 수: 8
+class_list4 = [2483, 30308, 22347, 28763]                       #--> 전체 클래스 수: 9
+class_list5 = [18357, 31863, 20877, 25469, 27733, 25367]        #--> 전체 클래스 수: 12
+class_list6 = [32310, 1900, 13900, 18147, 22074, 41768, 20014, 33880, 16548, 29667, 38162, 19232, 36637, 3832, 20238, 16232, 21325, 16262]  #--> 전체 클래스 수: 15 ~ 23
+
+data_maker2(img_dir, txt_dir, class_dict, class_list1, 0, 30, file_name="cls_list1_augmentation")       # 30개 추가 생성
+data_maker2(img_dir, txt_dir, class_dict, class_list2, 0, 25, file_name="cls_list2_augmentation")       # 25개 추가 생성
+data_maker2(img_dir, txt_dir, class_dict, class_list3, 0, 25, file_name="cls_list3_augmentation")       # 25개 추가 생성
+data_maker2(img_dir, txt_dir, class_dict, class_list4, 0, 25, file_name="cls_list4_augmentation")       # 25개 추가 생성
+data_maker2(img_dir, txt_dir, class_dict, class_list5, 0, 20, file_name="cls_list5_augmentation")       # 20개 추가 생성
+data_maker2(img_dir, txt_dir, class_dict, class_list6, 0, 10, file_name="cls_list6_augmentation")       # 10개 추가 생성
 """
